--- a/math_quize/index.html
+++ b/math_quize/index.html
@@ -11,11 +11,11 @@
 <body>
   <div class="container">
     <div class="result">
-      <div class="right">
-        <p>Start</p>
+      <div class="right"> 👍 
+        <p>0</p>
       </div>
-      <div class="wrong">
-        <p>No Wrong</p>
+      <div class="wrong"> 👎
+        <p>0</p>
       </div>
     </div>
     <h2>Multiplication MCQ Quiz</h2>
