--- a/Vocab App/index.html
+++ b/Vocab App/index.html
@@ -1,14 +1,71 @@
 <!DOCTYPE html>
-<html>
-
+<html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title></title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>FlashCards App</title>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/tailwindcss/2.2.19/tailwind.min.js"></script>
+    <link rel="stylesheet" href="style.css">
 </head>
+<body class="bg-gray-100 min-h-screen">
+    <!-- Header -->
+    <header class="bg-blue-600 text-white p-4 shadow-md">
+        <div class="container mx-auto flex justify-between items-center">
+            <h1 class="text-2xl font-bold">FlashCards</h1>
+            <button id="addCategoryBtn" class="bg-white text-blue-600 px-4 py-2 rounded-lg hover:bg-blue-50">
+                + Add Category
+            </button>
+        </div>
+    </header>
 
-<body>
+    <!-- Main Content -->
+    <main class="container mx-auto p-4">
+        <!-- Categories List -->
+        <div id="categoriesList" class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-4">
+            <!-- Categories will be dynamically inserted here -->
+        </div>
 
+        <!-- Flashcard Modal -->
+        <div id="flashcardModal" class="modal hidden fixed inset-0 bg-black bg-opacity-50 flex items-center justify-center">
+            <div class="bg-white rounded-lg p-6 max-w-md w-full mx-4">
+                <div class="flex justify-between items-center mb-4">
+                    <h2 id="cardCategory" class="text-xl font-bold text-gray-800"></h2>
+                    <button id="closeCardBtn" class="text-gray-500 hover:text-gray-700">
+                        <svg class="w-6 h-6" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+                            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M6 18L18 6M6 6l12 12"/>
+                        </svg>
+                    </button>
+                </div>
+                <div id="cardContent" class="space-y-4">
+                    <!-- Card content will be dynamically inserted here -->
+                </div>
+                <div class="flex justify-between mt-6">
+                    <button id="knowBtn" class="bg-green-500 text-white px-4 py-2 rounded hover:bg-green-600">
+                        I Know
+                    </button>
+                    <button id="dontKnowBtn" class="bg-red-500 text-white px-4 py-2 rounded hover:bg-red-600">
+                        I Don't Know
+                    </button>
+                </div>
+            </div>
+        </div>
+
+        <!-- Add Category Modal -->
+        <div id="addCategoryModal" class="modal hidden fixed inset-0 bg-black bg-opacity-50 flex items-center justify-center">
+            <div class="bg-white rounded-lg p-6 max-w-md w-full mx-4">
+                <h2 class="text-xl font-bold mb-4">Add New Category</h2>
+                <textarea id="categoryInput" class="w-full h-48 p-2 border rounded" placeholder="Paste category object here..."></textarea>
+                <div class="flex justify-end mt-4 space-x-2">
+                    <button id="cancelAddCategory" class="px-4 py-2 text-gray-600 hover:text-gray-800">Cancel</button>
+                    <button id="confirmAddCategory" class="bg-blue-600 text-white px-4 py-2 rounded hover:bg-blue-700">
+                        Add Category
+                    </button>
+                </div>
+            </div>
+        </div>
+    </main>
+
+    <script src="data.js"></script>
+    <script src="main.js"></script>
 </body>
-
 </html>
