--- a/Vocab App/index.html
+++ b/Vocab App/index.html
@@ -1,71 +1,106 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>FlashCards App</title>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/tailwindcss/2.2.19/tailwind.min.js"></script>
-    <link rel="stylesheet" href="style.css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Flashcards App</title>
+  <!-- Bootstrap CSS -->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
+  <link rel="stylesheet" href="style.css">
 </head>
-<body class="bg-gray-100 min-h-screen">
-    <!-- Header -->
-    <header class="bg-blue-600 text-white p-4 shadow-md">
-        <div class="container mx-auto flex justify-between items-center">
-            <h1 class="text-2xl font-bold">FlashCards</h1>
-            <button id="addCategoryBtn" class="bg-white text-blue-600 px-4 py-2 rounded-lg hover:bg-blue-50">
-                + Add Category
-            </button>
-        </div>
-    </header>
 
-    <!-- Main Content -->
-    <main class="container mx-auto p-4">
-        <!-- Categories List -->
-        <div id="categoriesList" class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-4">
-            <!-- Categories will be dynamically inserted here -->
-        </div>
+<body>
+  <div class="container mt-4">
+    <h1 class="text-center mb-4">Flashcards App</h1>
 
-        <!-- Flashcard Modal -->
-        <div id="flashcardModal" class="modal hidden fixed inset-0 bg-black bg-opacity-50 flex items-center justify-center">
-            <div class="bg-white rounded-lg p-6 max-w-md w-full mx-4">
-                <div class="flex justify-between items-center mb-4">
-                    <h2 id="cardCategory" class="text-xl font-bold text-gray-800"></h2>
-                    <button id="closeCardBtn" class="text-gray-500 hover:text-gray-700">
-                        <svg class="w-6 h-6" fill="none" stroke="currentColor" viewBox="0 0 24 24">
-                            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M6 18L18 6M6 6l12 12"/>
-                        </svg>
-                    </button>
-                </div>
-                <div id="cardContent" class="space-y-4">
-                    <!-- Card content will be dynamically inserted here -->
-                </div>
-                <div class="flex justify-between mt-6">
-                    <button id="knowBtn" class="bg-green-500 text-white px-4 py-2 rounded hover:bg-green-600">
-                        I Know
-                    </button>
-                    <button id="dontKnowBtn" class="bg-red-500 text-white px-4 py-2 rounded hover:bg-red-600">
-                        I Don't Know
-                    </button>
-                </div>
+    <!-- Home Page -->
+    <div class="row mb-4">
+      <div class="col-md-8">
+        <input type="text" id="searchInput" class="form-control" placeholder="Search cards...">
+      </div>
+      <div class="col-md-4">
+        <button class="btn btn-primary w-100" data-bs-toggle="modal" data-bs-target="#addCardModal">
+          Add New Word List
+        </button>
+      </div>
+    </div>
+
+    <!-- Word Lists -->
+    <div id="wordLists" class="row row-cols-1 row-cols-md-2 row-cols-lg-3 g-4">
+      <!-- Word lists will be dynamically added here -->
+    </div>
+
+    <!-- Flashcard Modal with Carousel -->
+    <div class="modal fade" id="flashcardModal" tabindex="-1">
+      <div class="modal-dialog modal-fullscreen">
+        <div class="modal-content h-100">
+          <div class="modal-header bg-light">
+            <h5 class="modal-title" id="flashcardTitle">Flashcards</h5>
+            <button type="button" class="btn-close" data-bs-dismiss="modal"></button>
+          </div>
+          <div class="modal-body p-0 d-flex flex-column justify-content-center">
+            <div id="flashcardCarousel" class="carousel slide h-100">
+              <div class="carousel-inner h-100">
+                <!-- Flashcards will be dynamically added here -->
+              </div>
             </div>
+          </div>
+          <div class="modal-footer bg-light justify-content-center">
+            <button type="button" class="btn btn-success me-2" id="knownBtn">Known</button>
+            <button type="button" class="btn btn-danger" id="unknownBtn">Unknown</button>
+          </div>
         </div>
+      </div>
+    </div>
 
-        <!-- Add Category Modal -->
-        <div id="addCategoryModal" class="modal hidden fixed inset-0 bg-black bg-opacity-50 flex items-center justify-center">
-            <div class="bg-white rounded-lg p-6 max-w-md w-full mx-4">
-                <h2 class="text-xl font-bold mb-4">Add New Category</h2>
-                <textarea id="categoryInput" class="w-full h-48 p-2 border rounded" placeholder="Paste category object here..."></textarea>
-                <div class="flex justify-end mt-4 space-x-2">
-                    <button id="cancelAddCategory" class="px-4 py-2 text-gray-600 hover:text-gray-800">Cancel</button>
-                    <button id="confirmAddCategory" class="bg-blue-600 text-white px-4 py-2 rounded hover:bg-blue-700">
-                        Add Category
-                    </button>
-                </div>
-            </div>
+    <!-- Add Category Modal -->
+    <div id="add-category-modal" class="modal fade" tabindex="-1">
+      <div class="modal-dialog modal-dialog-centered">
+        <div class="modal-content">
+          <div class="modal-header">
+            <h5 class="modal-title">Add New Category</h5>
+            <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+          </div>
+          <div class="modal-body">
+            <textarea id="category-input" class="form-control" placeholder="Paste category object here"></textarea>
+          </div>
+          <div class="modal-footer">
+            <button id="save-category" class="btn btn-primary">Save</button>
+          </div>
         </div>
-    </main>
+      </div>
+    </div>
+  </div>
 
-    <script src="data.js"></script>
-    <script src="main.js"></script>
+  <div class="modal fade" id="addCardModal" tabindex="-1">
+    <div class="modal-dialog">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h5 class="modal-title">Add New Word List</h5>
+          <button type="button" class="btn-info">How to add?</button>
+          <button type="button" class="btn-close" data-bs-dismiss="modal"></button>
+        </div>
+        <div class="modal-body">
+          <input type="text" name="title" id="title" value="" placeholder="Word List Name"/>
+          <textarea id="newCardInput" class="form-control" rows="10" placeholder="paste json [{...},{},..]"></textarea>
+        </div>
+        <div class="modal-footer">
+          <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancel</button>
+          <button type="button" class="btn btn-primary" id="saveNewCard">Add Word List</button>
+        </div>
+      </div>
+    </div>
+  </div>
+  </div>
+
+
+  <!-- jQuery, Bootstrap JS, and Hammer.js -->
+  <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/hammer.js/2.0.8/hammer.min.js"></script>
+  <script src="data.js"></script>
+  <script src="main.js"></script>
 </body>
+
 </html>
