--- a/vocab_app/index.html
+++ b/vocab_app/index.html
@@ -78,11 +78,11 @@
       <div class="modal-content">
         <div class="modal-header">
           <h5 class="modal-title">Add New Word List</h5>
-          <button type="button" class="btn-info">How to add?</button>
+          <button type="button" class="btn-info"><a href="./prev.html">How to add?</a></button>
           <button type="button" class="btn-close" data-bs-dismiss="modal"></button>
         </div>
         <div class="modal-body">
-          <input type="text" name="title" id="title" value="" placeholder="Word List Name"/>
+          <input type="text" name="title" id="title" value="" placeholder="Word List Name" />
           <textarea id="newCardInput" class="form-control" rows="10" placeholder="paste json [{...},{},..]"></textarea>
         </div>
         <div class="modal-footer">
@@ -93,6 +93,20 @@
     </div>
   </div>
   </div>
+  <!-- Modal for Preview -->
+  <div class="modal fade" id="previewModal" tabindex="-1" aria-labelledby="previewModalLabel" aria-hidden="true">
+    <div class="modal-dialog modal-lg">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h5 class="modal-title" id="previewModalLabel">Word Details</h5>
+          <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+        </div>
+        <div class="modal-body">
+          <!-- Card Previews will be dynamically added here -->
+        </div>
+      </div>
+    </div>
+  </div>
 
 
   <!-- jQuery, Bootstrap JS, and Hammer.js -->
@@ -101,6 +115,7 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/hammer.js/2.0.8/hammer.min.js"></script>
   <script src="data.js"></script>
   <script src="main.js"></script>
+
 </body>
 
 </html>
