--- a/wordCard/index.html
+++ b/wordCard/index.html
@@ -1,83 +1,98 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>FlashCards</title>
-    <link href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.3.2/css/bootstrap.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="style.css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Word List Preview</title>
+  <!-- Bootstrap CSS -->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
+  <style>
+   
+  </style>
 </head>
-<body class="bg-light">
-    <div class="container py-4">
-        <!-- Header with Search and Add Button -->
-        <div class="row mb-4">
-            <div class="col-md-8">
-                <input type="text" id="searchInput" class="form-control" placeholder="Search cards...">
-            </div>
-            <div class="col-md-4">
-                <button class="btn btn-primary w-100" data-bs-toggle="modal" data-bs-target="#addCardModal">
-                    Add New Word List
-                </button>
-            </div>
-        </div>
+<body>
+  <div class="container mt-4">
+    <h2 class="text-center mb-4">Word Lists</h2>
 
-        <!-- Word Lists -->
-        <div id="wordLists" class="row row-cols-1 row-cols-md-2 row-cols-lg-3 g-4">
-            <!-- Word lists will be dynamically added here -->
-        </div>
+    <!-- Word Lists Section -->
+    <div id="word-lists" class="row"></div>
 
-        <!-- Flashcard Modal with Carousel -->
-        <div class="modal fade" id="flashcardModal" tabindex="-1">
-            <div class="modal-dialog modal-lg modal-dialog-centered">
-                <div class="modal-content">
-                    <div class="modal-header">
-                        <h5 class="modal-title" id="flashcardTitle">Flashcards</h5>
-                        <button type="button" class="btn-close" data-bs-dismiss="modal"></button>
-                    </div>
-                    <div class="modal-body p-0">
-                        <div id="flashcardCarousel" class="carousel slide">
-                            <div class="carousel-inner">
-                                <!-- Flashcards will be dynamically added here -->
-                            </div>
-                            <button class="carousel-control-prev" type="button" data-bs-target="#flashcardCarousel" data-bs-slide="prev">
-                                <span class="carousel-control-prev-icon"></span>
-                            </button>
-                            <button class="carousel-control-next" type="button" data-bs-target="#flashcardCarousel" data-bs-slide="next">
-                                <span class="carousel-control-next-icon"></span>
-                            </button>
-                        </div>
-                    </div>
-                    <div class="modal-footer justify-content-center">
-                        <button type="button" class="btn btn-success me-2" id="knownBtn">Known</button>
-                        <button type="button" class="btn btn-danger" id="unknownBtn">Unknown</button>
-                    </div>
-                </div>
-            </div>
+    <!-- Modal for Preview -->
+    <div class="modal fade" id="previewModal" tabindex="-1" aria-labelledby="previewModalLabel" aria-hidden="true">
+      <div class="modal-dialog modal-lg">
+        <div class="modal-content">
+          <div class="modal-header">
+            <h5 class="modal-title" id="previewModalLabel">Word Details</h5>
+            <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+          </div>
+          <div class="modal-body">
+            <!-- Card Previews will be dynamically added here -->
+          </div>
         </div>
-
-        <!-- Add Card Modal -->
-        <div class="modal fade" id="addCardModal" tabindex="-1">
-            <div class="modal-dialog">
-                <div class="modal-content">
-                    <div class="modal-header">
-                        <h5 class="modal-title">Add New Word List</h5>
-                        <button type="button" class="btn-close" data-bs-dismiss="modal"></button>
-                    </div>
-                    <div class="modal-body">
-                        <textarea id="newCardInput" class="form-control" rows="10" 
-                            placeholder="Paste word list object here..."></textarea>
-                    </div>
-                    <div class="modal-footer">
-                        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancel</button>
-                        <button type="button" class="btn btn-primary" id="saveNewCard">Add Word List</button>
-                    </div>
-                </div>
-            </div>
-        </div>
+      </div>
     </div>
+  
+  </div>
 
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.3.2/js/bootstrap.bundle.min.js"></script>
-    <script src="data.js"></script>
-    <script src="main.js"></script>
+  <!-- Bootstrap JS -->
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
+  <script src="../Vocab App/data.js" type="text/javascript" charset="utf-8"></script>
+  <script>
+
+    // Function to render word lists
+    function renderWordLists() {
+      const wordListsContainer = document.getElementById('word-lists');
+      wordList.forEach(list => {
+        const listButton = document.createElement('button');
+        listButton.classList.add('btn', 'btn-primary', 'list-button', 'col-md-4', 'mb-3');
+        listButton.textContent = list.listName;
+        listButton.addEventListener('click', () => openPreviewModal(list.cards));
+        wordListsContainer.appendChild(listButton);
+      });
+    }
+
+    // Function to open the modal and populate it with card previews
+    function openPreviewModal(cards) {
+      const modalBody = document.querySelector('#previewModal .modal-body');
+      modalBody.innerHTML = ''; // Clear previous content
+
+      card.forEach(card => {
+        const cardPreview = document.createElement('div');
+        cardPreview.classList.add('card-preview');
+
+        const wordTitle = document.createElement('h4');
+        wordTitle.textContent = card.word;
+
+        const banglaMeaning = document.createElement('p');
+        banglaMeaning.innerHTML = `<strong>Bangla Meaning:</strong> ${card.banglaMeaning.join(", ")}`;
+
+        const englishMeaning = document.createElement('p');
+        englishMeaning.innerHTML = `<strong>English Meaning:</strong> ${card.englishMeaning}`;
+
+        const similarWordsContainer = document.createElement('p');
+        similarWordsContainer.innerHTML = `<strong>Similar Words:</strong>`;
+        card.similarWords.forEach(word => {
+          const tag = document.createElement('span');
+          tag.classList.add('similar-word');
+          tag.textContent = word;
+          similarWordsContainer.appendChild(tag);
+        });
+
+        cardPreview.appendChild(wordTitle);
+        cardPreview.appendChild(banglaMeaning);
+        cardPreview.appendChild(englishMeaning);
+        cardPreview.appendChild(similarWordsContainer);
+
+        modalBody.appendChild(cardPreview);
+      });
+
+      // Show the modal
+      const previewModal = new bootstrap.Modal(document.getElementById('previewModal'));
+      previewModal.show();
+    }
+
+    // Initialize the word lists
+    renderWordLists();
+  </script>
 </body>
 </html>
